# mycmath

./: .gitignore  .travis.yml  Pipfile  appveyor.yml  mycmathmodule.c  setup.cfg  setup.py  tox.ini  wheel.sh
mycmath/: __init__.py
tests/: test_it.py
