[egg_info]
tag_build = dev
tag_date = 1

[aliases]
release = egg_info -Db ""

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[metadata]
name = mycmath
author = Atsushi Odagiri
author_email = aodagx@gmail.com
url = https://github.com/aodag/mycmath
license = MIT
description = sample package
long_description = file: README.rst

[options]
packages = find: